fixed the gap

--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,14 @@
 }
 .block{
   opacity: .8;
-  padding:10px;
+  padding:0;
   width:100%;
   margin-right:auto;
   margin-left:auto;
   border-radius:10px;
   margin-top:20px;
+  margin:0;
+
 }
 
 .nav-pills{
